--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   
-  <h3>Name: akashjdongre@gmail.com</h3>
-  
+  <h3> Name : Akash Dongre </h3>
+  <h3>Email : akashjdongre@gmail.com</h3>
 </body>
 </html>
