--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <h3> Name : Akash Dongre </h3>
   <h3>Email : akashjdongre@gmail.com</h3>
   <h5>Address : Vashi , Navi Mumbai<h5>
-	  <h6>Role : PHP Developer</h6>
-	
+  <h6>Role : PHP Developer</h6>
+  <h6>BE in Computer</h6>
+  <h6>Ramrao  adik institute of tecbhnology</h6>
 </body>
 </html>
