--- a/index.html
+++ b/index.html
@@ -11,5 +11,9 @@
   <h6>Role : PHP Developer</h6>
   <h6>BE in Computer</h6>
   <h6>Ramrao  adik institute of tecbhnology</h6>
+	  
+	  <span>Technical Skills : PHP , SQL, CSS , HTML , Jquery , Javascript , Bootstrap</span>
+	  <span>CTC : 4.2 Lcs , Notice Period : 15 Days</span>
+	  
 </body>
 </html>
